k8s/istio-peer-authentication.yml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: crowdvision
spec:
  mtls:
    mode: STRICT
